// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewConsequenceTable > should render the table with data 1`] = `
<DocumentFragment>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Consequence type
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Network wide
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/type-of-consequence/2/0?return=%2Freview-disruption"
            >
              Change
              <span
                class="govuk-visually-hidden"
              >
                Consequence type
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Mode of transport
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Bus
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
            >
              Change
              <span
                class="govuk-visually-hidden"
              >
                Mode of transport
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Disruption Area
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        N/A
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
            >
              Change
              <span
                class="govuk-visually-hidden"
              >
                Disruption Area
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Advice to display
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        The road is closed for the following reasons: Example, example, example, example
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
            >
              Change
              <span
                class="govuk-visually-hidden"
              >
                Advice to display
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Remove from journey planner
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Yes
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
            >
              Change
              <span
                class="govuk-visually-hidden"
              >
                Remove from journey planner
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Disruption delay
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        33 minutes
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        >
          <li
            class="govuk-summary-list__actions-list-item"
          >
            <a
              class="govuk-link"
              href="/create-consequence-network/2/0?return=%2Freview-disruption"
            >
              Change
              <span
                class="govuk-visually-hidden"
              >
                Disruption delay
              </span>
            </a>
          </li>
        </ul>
      </dd>
    </div>
  </dl>
  <button
    class="govuk-button govuk-button--warning mt-4"
    data-module="govuk-button"
  >
    Delete consequence
  </button>
  <button
    class="govuk-button govuk-button--secondary mt-4 ml-4"
    data-module="govuk-button"
    formaction="/api/duplicate-consequence?consequenceId=0&return=/review-disruption"
  >
    Duplicate consequence
  </button>
</DocumentFragment>
`;

exports[`ReviewConsequenceTable > should render the table with data without change links 1`] = `
<DocumentFragment>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Consequence type
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Network wide
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Mode of transport
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Bus
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Disruption Area
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        N/A
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Advice to display
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        The road is closed for the following reasons: Example, example, example, example
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Remove from journey planner
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        Yes
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Disruption delay
      </dt>
      <dd
        class="govuk-summary-list__value"
      >
        33 minutes
      </dd>
      <dd
        class="govuk-summary-list__actions"
      >
        <ul
          class="govuk-summary-list__actions-list"
        />
      </dd>
    </div>
  </dl>
</DocumentFragment>
`;
